--- a/src/Layout/Footer/Footer.css
+++ b/src/Layout/Footer/Footer.css
@@ -1,5 +1,9 @@
 .footer{
     background-color: aliceblue;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
 }
 .footer__inner{
     display: flex;
