Last change by Oleg

--- a/src/Layout/Footer/Footer.css
+++ b/src/Layout/Footer/Footer.css
@@ -1,17 +1,18 @@
 .footer{
-    background-color: aliceblue;
     position: absolute;
     left: 0;
     bottom: 0;
     width: 100%;
 }
 .footer__inner{
-    gap: 30px;
     display: flex;
+    background: rgba(0, 0, 0, 0);
+    justify-content: space-around;
 }
 .footer__list{
     flex-wrap: wrap;
     text-align: left;
+    margin-right: 50px;
 }
 .footer__item{
     padding-bottom: 5.3px;
