--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -24,26 +24,57 @@ body {
   text-align: center;
   justify-content: center;
 }
+
+.main-inp{
+  padding: 5px;
+  margin-right: 3px;
+}
+
+.main-btn {
+  padding: 3px 8px;
+  padding-bottom: 5px;
+  border: none;
+  height: 28px;
+  cursor: pointer;
+}
+
 .todoshka{
-  justify-content: space-between;
   display: flex;
+  border: 1px solid rgb(223, 223, 223);
+  margin-bottom: 5px;
+
 }
 .del{
-  height: 19px;
+  height: 32px;
+  padding: 0 3px 0 3px;
+  border: 0;
+  border-radius: 2px;
+  background-color: rgb(218, 61, 61);
+  color: white;
+  cursor: pointer;
 }
+
 .pen{
-  height: 21.3px;
+  height: 29.3px;
+  margin-right: 1.5px;
+  border: 0 solid rgb(112, 179, 201);
+  cursor: pointer;
 }
+
 .todo__item{
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   width: 350.77px;
   padding-left: 4.4px;
-  background-color: azure;
+  background-color: lightgray;
   align-items: center;
-  margin-bottom: 13px;
+  padding-bottom: 7px;
 }
+:focus {
+  outline-color: gray;
+}
+
 .chbx{
-  margin-top: 4.5px;
+  margin: 6px 12px 0 0;
 }
 .todo__list{
   margin: 0 auto;
@@ -53,4 +84,5 @@ body {
   line-break: anywhere;
   max-width: 430px;
   height: 353.30px;
+  border-radius: 3px;
 }
